--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,4 +1,8 @@
 :root {
+
+  /* global background */
+  $app-bg: rgb(234, 234, 227); // #EAEAE3
+
   /* Teksty i tła */
   --color-text: #212529;
   --color-bg: #ffffff;
