--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -2,3 +2,4 @@
 @import 'layout';
 @import 'components';
 @import 'utilities';
+@import "pages/search-results"; // lub @use, jeśli tak masz skonfigurowane
