--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,3 +3,4 @@
 @import 'components';
 @import 'utilities';
 @import "pages/search-results"; // lub @use, jeśli tak masz skonfigurowane
+@import 'pages/dashboard-staff';
