--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -13,8 +13,8 @@
   --color-accent-hover: #e04e15;
 
   /* Back to top */
-  --color-btt: #35a65b;
-  --color-btt-hover: #097739;
+  --color-btt: #667eea;
+  --color-btt-hover: #5a67d8;
 
   /* Komponenty */
   --color-card-bg: #eaeae3;
