--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -379,7 +379,7 @@
   .product-price {
     font-size: 1.1rem;
     font-weight: 700;
-    color: #198754;
+    color: var(--color-primary);
     margin-bottom: 0.5rem;
   }
 
