--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -138,7 +138,7 @@
   color: var(--color-white);
   background-color: #7474743f; /* półprzezroczyste szare tło */
 }
-.btn:hover {
+.search-card .btn:hover {
   border-color: transparent;
   background-color: #1b1b1b96;
   color: var(--color-white) !important;
